syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "CollectIOT.Api.Explorer.Protos";

message SensorMeasurementValue {
	oneof data {
		double number = 1;
		string text = 2;
	}
}

message SensorData {
	string id = 1;
	google.protobuf.Timestamp reported_at = 2;
	map<string, SensorMeasurementValue> measurements = 3;
	string message_id = 4;
	int32 port = 5;
}

message GetSensorDataRequest {
	google.protobuf.Timestamp after = 1;
	google.protobuf.Timestamp before = 2;
	string sensor_id = 3;
}

message GetPaginatedDataRequest {
	string sensor_id = 1;
	int32 limit = 2;
	int32 page = 3;
}

message PaginatedDataResponse {
	repeated SensorData data = 1;
}

message SubscribeSensorMessage {
	string sensor_id = 1;
}

service DataExplorerGrpcService {
  rpc GetSensorDataStream (GetSensorDataRequest) returns (stream SensorData);
  rpc GetPaginatedSensorData (GetPaginatedDataRequest) returns (PaginatedDataResponse);
  rpc SubscribeSensor (SubscribeSensorMessage) returns (stream SensorData);
}